<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textViewCompraBoleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/compra_tu_boleto"
        android:textColor="#043764"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/back"
        android:drawableLeft="@drawable/back"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMenuSeleccion"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/menuseleccionboleto" />

    <ImageView
        android:id="@+id/imageViewticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMenuSeleccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ticket"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/buttonProcederCompra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/erColor"
        android:text="@string/pagar"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonperfil"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonticket"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonPulsera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonpulsera"
            android:paddingBottom="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonsalidas"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonmenu"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="302dp"
        android:layout_height="248dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="44dp"
        android:background="@color/casiTransparente"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonProcederCompra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/erColor"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogoCT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/erColor"
                android:contentDescription="@string/todo"
                android:paddingTop="15dp"
                app:srcCompat="@drawable/touristerlogo" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFechaBoleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="7dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/fecha_boleto"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewHoraBoleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="4dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/hora_boleto"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewRecorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/recorrido"
            android:textColor="#043764"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAdultos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/un_adulto"
                android:textColor="#B3B3B3"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewTarifaAdulto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tarifa_dummy2"
                android:textColor="#B3B3B3"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNinos"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/dos_ninos"
                android:textColor="#B3B3B3"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewTarifaNinos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tarifa_dummy3"
                android:textColor="#B3B3B3"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLinea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/linea" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/total"
                android:textColor="#707070"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewDineroTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/dinerito"
                android:textColor="#707070"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPreguntaViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/correcto_viaje"
        android:textColor="#707070"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTiempoRestante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableStart="@drawable/tiempo"
        android:drawableLeft="@drawable/tiempo"
        android:text="@string/horadummy"
        android:textColor="#B3B3B3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>