<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/menuseleccion" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/back"
        android:drawableLeft="@drawable/back"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCompraBoleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/compra_tu_boleto"
        android:textColor="#043764"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26000002" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="96dp"
        android:background="#043764"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTurista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/turistas"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewPerfilBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/perfilusuarioblanco"
            android:drawableLeft="@drawable/perfilusuarioblanco"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/_1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="96dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/fecha"
            android:textColor="#B3B3B3"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewFechaDummy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/fecha_de_septiembre"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,SmallSp" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/recatnguloconsombreado"
        android:fadingEdge="horizontal|vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textViewDummy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/hora_dummy_1"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewDummy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/tarifa_dummy"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/horario"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTarifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tarifa"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/recatnguloconsombreado"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewFechaDummy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/hora_dummy_2"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewTarifaDummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/tarifa_dummy"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/recatnguloconsombreado"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textViewFechaDummy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/hora_dummy_3"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/textViewTarifaDummy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tarifa_dummy"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#2699FB"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonperfil"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonticket"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonPulsera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonpulsera"
            android:paddingBottom="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonsalidas"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableBottom="@drawable/botonmenu"
            android:paddingBottom="12dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/erColor"
        android:text="@string/continuar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/tiempo"
        android:drawableLeft="@drawable/tiempo"
        android:text="@string/horadummy"
        android:textColor="#B3B3B3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>